--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header span {
 
 .text-wrapper {
     /* 📍 Cвойство для ограничения ширины блока с текстом в первой секции */
-    max-width: 450px;
+    max-width: 425px;
 }
 
 .main-title {
@@ -72,7 +72,7 @@ header span {
     /* 📍 Свойствa flexbox для отступов между элементами select, .info-wrapper и .skills-wrapper  */
     display: flex;
     flex-direction: column;
-    row-gap: 80px;
+    gap: 60px;
 }
 
 select {
@@ -133,11 +133,15 @@ select:hover,
     display: flex;
     flex-direction: column-reverse;
 
+
 }
 
 .skills {
     /* 📍 Свойства flexbox для расположения элементов с классом .label */
     min-width: 50%;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
 
 .books-list {
